HHH-18610 - Fix SingleTableNativeQueryTest to only use Java 11